Fix horizontal scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,7 @@ body {
 }
 
 *::-webkit-scrollbar {
+	height: 5px;
 	width: 5px;
 	background-color: transparent;
 	border-radius: 5px;
